# reelcraft

./: .env.example  .gitignore  README.md  api.py  main.py  pipeline.py  pyproject.toml
config/: directories.py  langfuse_config.py  logger.py  prompts.py
frontend/: app.js  index.html  style.css
mocks/: mock.py
resources/: ASSET_SELECTION_IMPROVEMENTS.md  CLOUD_STORAGE_OPTIONS.md  ENHANCEMENTS.md  JOB_SYSTEM.md  STORAGE_GUIDE.md  STORAGE_SETUP.md
scripts/: add_existing_video.py  delete_video.py  fix_storage_case.py  migrate_add_storage_location.py  test_delete.py
services/: __init__.py  api.py  cleanup.py  database.py  job_manager.py  pipeline.py  storage.py
tests/: test_asset_filtering.py  test_enhancements.py  test_job_system.py  test_storage_cleanup.py  test_storage_filter.py  test_upload.py
utils/: ai.py  assets.py  cleanup_all.py  fire_crawl.py  http_client.py  video_editing.py
